--- a/TiendaComputadoras/lang/es.json
+++ b/TiendaComputadoras/lang/es.json
@@ -1,6 +1,4 @@
 {
-    "(and :count more error)": "(y :count error más)",
-    "(and :count more errors)": "(y :count errores más)",
     "A Timeout Occurred": "Se produjo un tiempo de espera",
     "Accept": "Aceptar",
     "Accepted": "Aceptado",
@@ -10,10 +8,10 @@
     "Add :name": "Agregar :name",
     "Admin": "Administrar",
     "Agree": "Aceptar",
-    "All rights reserved.": "Todos los derechos reservados.",
     "Already Reported": "Ya Reportado",
     "Archive": "Archivar",
     "Assign": "Asignar",
+    "Associate": "Asociar",
     "Attach": "Adjuntar",
     "Bad Gateway": "Mala puerta de enlace",
     "Bad Request": "Solicitud incorrecta",
@@ -21,9 +19,9 @@
     "Browse": "Navegar",
     "Cancel": "Cancelar",
     "Choose": "Elija",
-    "Choose :name": "Elige :name",
+    "Choose :name": "Elegir :name",
     "Choose File": "Elija archivo",
-    "Choose Image": "Elija la Imagen",
+    "Choose Image": "Elegir Imagen",
     "Click to copy": "Haga clic para copiar",
     "Client Closed Request": "Solicitud cerrada del cliente",
     "Close": "Cerrar",
@@ -64,17 +62,12 @@
     "Found": "Encontrado",
     "Gateway Timeout": "Tiempo de espera de puerta de enlace",
     "Go Home": "Ir a inicio",
-    "Go to page :page": "Ir a la página :page",
     "Gone": "Recurso no disponible",
-    "Hello!": "¡Hola!",
     "Hide": "Ocultar",
     "Hide :name": "Ocultar :name",
     "Home": "Inicio",
     "HTTP Version Not Supported": "Versión HTTP no compatible",
     "I'm a teapot": "Soy una tetera",
-    "If you did not create an account, no further action is required.": "Si no ha creado una cuenta, no se requiere ninguna acción adicional.",
-    "If you did not request a password reset, no further action is required.": "Si no ha solicitado el restablecimiento de contraseña, omita este mensaje de correo electrónico.",
-    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Si está teniendo problemas al hacer clic en el botón \":actionText\", copie y pegue la URL de abajo\nen su navegador web:",
     "IM Used": "Estoy usado",
     "Image": "Imagen",
     "Impersonate": "Personificar",
@@ -84,15 +77,14 @@
     "Insufficient Storage": "Espacio insuficiente",
     "Internal Server Error": "Error interno del servidor",
     "Introduction": "Introducción",
-    "Invalid JSON was returned from the route.": "Se devolvió un JSON no válido desde la ruta.",
     "Invalid SSL Certificate": "Certificado SSL no válido",
     "Length Required": "Longitud requerida",
     "Like": "Me gusta",
     "Load": "Cargar",
     "Localize": "Localizar",
     "Locked": "Bloqueado",
-    "Login": "Iniciar sesión",
-    "Logout": "Finalizar sesión",
+    "Log In": "Iniciar sesión",
+    "Log Out": "Finalizar sesión",
     "Loop Detected": "Bucle detectado",
     "Maintenance Mode": "Modo de mantenimiento",
     "Method Not Allowed": "Método no permitido",
@@ -113,7 +105,6 @@
     "Not Found": "No encontrado",
     "Not Implemented": "No se ha implementado",
     "Not Modified": "No modificado",
-    "of": "de",
     "OK": "DE ACUERDO",
     "Open": "Abrir",
     "Open in a current window": "Abrir en una ventana actual",
@@ -122,13 +113,10 @@
     "Open in the topmost frame": "Abrir en el marco superior",
     "Open on the website": "Abrir en el sitio web",
     "Origin Is Unreachable": "El origen es inalcanzable",
-    "Page Expired": "Página expirada",
-    "Pagination Navigation": "Navegación por los enlaces de paginación",
     "Partial Content": "Contenido parcial",
     "Payload Too Large": "Solicitud demasiado grande",
     "Payment Required": "Pago requerido",
     "Permanent Redirect": "Redirección permanente",
-    "Please click the button below to verify your email address.": "Por favor, haga clic en el botón de abajo para verificar su dirección de correo electrónico.",
     "Precondition Failed": "Error de condición previa",
     "Precondition Required": "Precondición requerida",
     "Preview": "Previsualizar",
@@ -137,19 +125,15 @@
     "Proxy Authentication Required": "Se requiere autenticación proxy",
     "Railgun Error": "Error de cañón de riel",
     "Range Not Satisfiable": "Rango no satisfactorio",
-    "Regards": "Saludos",
-    "Register": "Registrarse",
+    "Record": "Registro",
     "Request Header Fields Too Large": "Campos de encabezado de solicitud demasiado grandes",
     "Request Timeout": "Solicitud de tiempo de espera",
     "Reset Content": "Restablecer contenido",
-    "Reset Password": "Restablecer contraseña",
-    "Reset Password Notification": "Notificación de restablecimiento de contraseña",
     "Restore": "Restaurar",
     "Restore :name": "Restaurar :name",
-    "results": "resultados",
     "Retry With": "Reintentar con",
     "Save": "Guardar",
-    "Save & Close": "Guardar cerrar",
+    "Save & Close": "Guardar y cerrar",
     "Save & Return": "Guardar y volver",
     "Save :name": "Guardar :name",
     "Search": "Buscar",
@@ -158,17 +142,17 @@
     "Select": "Seleccione",
     "Select All": "Seleccionar todo",
     "Send": "Enviar",
-    "Server Error": "Error del servidor",
-    "Service Unavailable": "Servicio no disponible",
     "Session Has Expired": "La sesión ha expirado",
     "Settings": "Ajustes",
     "Show": "Mostrar",
     "Show :name": "Mostrar :name",
     "Show All": "Mostrar todo",
-    "Showing": "Mostrando",
+    "Sign In": "Iniciar sesión",
     "Solve": "Resolver",
     "SSL Handshake Failed": "Protocolo de enlace SSL fallido",
-    "Submit": "Entregar",
+    "Start": "Comenzar",
+    "Stop": "Detener",
+    "Submit": "Enviar",
     "Subscribe": "Suscriba",
     "Switch": "Cambiar",
     "Switch To Role": "Cambiar de rol",
@@ -176,12 +160,18 @@
     "Tag": "Etiqueta",
     "Tags": "Etiquetas",
     "Temporary Redirect": "Redirección temporal",
-    "The given data was invalid.": "Los datos proporcionados no son válidos.",
-    "The response is not a streamed response.": "La respuesta no es una respuesta transmitida.",
-    "The response is not a view.": "La respuesta no es una vista.",
-    "This password reset link will expire in :count minutes.": "Este enlace de restablecimiento de contraseña expirará en :count minutos.",
-    "to": "al",
-    "Toggle navigation": "Alternar navegación",
+    "The :attribute must be at least :length characters and contain at least one number.": "La :attribute debe tener al menos :length caracteres y contener por lo menos un número.",
+    "The :attribute must be at least :length characters and contain at least one special character and one number.": "La :attribute debe tener al menos :length caracteres y contener por lo menos un caracter especial y un número.",
+    "The :attribute must be at least :length characters and contain at least one special character.": "La :attribute debe tener al menos :length caracteres y contener por lo menos un carácter especial.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one number.": "La :attribute debe tener al menos :length caracteres y contener por lo menos una letra mayúscula y un número.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one special character.": "La :attribute debe tener al menos :length caracteres y contener por lo menos una letra mayúscula y un carácter especial.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character, one number, and one special character.": "La :attribute debe tener al menos :length caracteres y contener por lo menos una letra mayúscula, un número y un carácter especial.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character.": "La :attribute debe tener al menos :length caracteres y contener por lo menos una letra mayúscula.",
+    "The :attribute must be at least :length characters.": "La :attribute debe tener al menos :length caracteres.",
+    "The provided password does not match your current password.": "La contraseña proporcionada no coincide con su contraseña actual.",
+    "The provided password was incorrect.": "La contraseña proporcionada no es correcta.",
+    "The provided two factor authentication code was invalid.": "El código de autenticación de dos factores proporcionado no es válido.",
+    "The provided two factor recovery code was invalid.": "El código de recuperación de dos factores proporcionado no es válido.",
     "Too Early": "Demasiado temprano",
     "Too Many Requests": "Demasiadas peticiones",
     "Translate": "Traducir",
@@ -201,11 +191,8 @@
     "Use Proxy": "Usa proxy",
     "User": "Usuario",
     "Variant Also Negotiates": "Variante También Negocia",
-    "Verify Email Address": "Confirme su correo electrónico",
-    "View": "Vista",
+    "View": "Ver",
     "View :name": "Ver :name",
     "Web Server is Down": "El servidor web está caído",
-    "Whoops!": "¡Ups!",
-    "Yes": "Sí",
-    "You are receiving this email because we received a password reset request for your account.": "Ha recibido este mensaje porque se solicitó un restablecimiento de contraseña para su cuenta."
+    "Yes": "Sí"
 }
